--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
-# Files and directories created by pub
-.packages
+#############
+## Dart
+#############
+
+build/
+packages/
+.idea/
+pubspec.lock
+.buildlog
+.project
 .pub/
-packages
-pubspec.lock # (Remove this pattern if you wish to check in your lock file)
+.project
+*.dart.js
+*.js_
+*.js.deps
+*.js.map
+.packages
+js/
